# kmp/shared/src/commonMain/generated/app/cadence/shared/api/models/DoseBandBody.kt
@@ -1,0 +1,51 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package app.cadence.shared.api.models
+
+import app.cadence.shared.api.models.DoseBody
+import app.cadence.shared.api.models.TrendRangeBody
+
+import kotlinx.serialization.*
+import kotlinx.serialization.descriptors.*
+import kotlinx.serialization.encoding.*
+
+/**
+ * 
+ *
+ * @param dose 
+ * @param range 
+ */
+@Serializable
+
+data class DoseBandBody (
+
+    @SerialName(value = "dose") @Required val dose: DoseBody,
+
+    @SerialName(value = "range") @Required val range: TrendRangeBody
+
+) {
+
+
+}
+
