# kmp/shared/src/commonMain/generated/app/cadence/shared/api/models/TrendPointBody.kt
@@ -1,0 +1,52 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package app.cadence.shared.api.models
+
+
+import kotlinx.serialization.*
+import kotlinx.serialization.descriptors.*
+import kotlinx.serialization.encoding.*
+
+/**
+ * 
+ *
+ * @param id 
+ * @param measuredAt 
+ * @param `value` 
+ */
+@Serializable
+
+data class TrendPointBody (
+
+    @SerialName(value = "id") @Required val id: kotlin.String,
+
+    @SerialName(value = "measured_at") @Required val measuredAt: kotlin.time.Instant,
+
+    @SerialName(value = "value") @Required val `value`: kotlin.Double
+
+) {
+
+
+}
+
